Closed Bug 902145 Opened 12 years ago Closed 12 years ago

Intermittent webspeech/recognition/test/test_abort.html | unexpected event: speechstart and/or speechend

Categories

(Core :: General, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26
Tracking Status
firefox24 --- unaffected
firefox25 --- unaffected
firefox26 --- fixed

People

(Reporter: RyanVM, Assigned: ggp)

Details

(Keywords: intermittent-failure)

Attachments

(2 files)

https://tbpl.mozilla.org/php/getParsedLog.php?id=26218551&tree=B2g-Inbound Ubuntu VM 12.04 b2g-inbound debug test mochitest-1 on 2013-08-06 08:49:21 PDT for push a1bfe3e4d807 slave: tst-linux32-ec2-035 09:45:15 INFO - 154453 INFO TEST-PASS | /tests/content/media/webspeech/recognition/test/test_abort.html | received event audiostart 09:45:15 INFO - 154454 INFO TEST-PASS | /tests/content/media/webspeech/recognition/test/test_abort.html | received event start 09:45:15 INFO - Status changed old= 10, new= 11 09:45:15 INFO - Status changed old= 11, new= 12 09:45:15 INFO - 154455 ERROR TEST-UNEXPECTED-FAIL | /tests/content/media/webspeech/recognition/test/test_abort.html | unexpected event: speechstart 09:45:15 INFO - 154456 INFO TEST-INFO | /tests/content/media/webspeech/recognition/test/test_abort.html | Aborting on speechstart 09:45:15 INFO - 154457 INFO TEST-PASS | /tests/content/media/webspeech/recognition/test/test_abort.html | received event audioend 09:45:15 INFO - 154458 INFO TEST-PASS | /tests/content/media/webspeech/recognition/test/test_abort.html | audioend must come after audiostart 09:45:15 INFO - 154459 INFO TEST-PASS | /tests/content/media/webspeech/recognition/test/test_abort.html | received event end
Guilherme, can you please look into this? :)
Flags: needinfo?(ggoncalves)
Summary: Intermittent webspeech/recognition/test/test_abort.html | unexpected event: speechstart → Intermittent webspeech/recognition/test/test_abort.html | unexpected event: speechstart and/or speechend
I'm not familiar with the DOMApplicationRegistry errors, but assuming they're unrelated, these failures could be caused by us still processing audio samples after calling abort() on a speech recognition session. I'm trying to reproduce that and will have a patch soon if that's the case.
Flags: needinfo?(ggoncalves)
(In reply to Guilherme Gonçalves [:ggp] from comment #27) > I'm not familiar with the DOMApplicationRegistry errors Completely unrelated. Please ignore.
This could fix the issue. I'm running this on try right now.
Seems to have helped, this is the try run: https://tbpl.mozilla.org/?tree=Try&rev=67d41261fe7d
Attachment #801589 - Flags: review?(bugs)
Attachment #801591 - Flags: review?(bugs)
Attachment #801589 - Flags: review?(bugs) → review+
Comment on attachment 801591 [details] [diff] [review] Part 2 - Ignore all speech events while aborting. I guess so, though the spec is not quite clear whether SpeechRequest can be reused after abort()
Attachment #801591 - Flags: review?(bugs) → review+
Attachment #801589 - Attachment description: Remove priority events, which were unused. → Part 1 - Remove priority events, which were unused.
Attachment #801591 - Attachment description: Ignore all speech events while aborting. → Part 2 - Ignore all speech events while aborting.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: