Bug 902145 - Ignore all speech events while aborting. r=smaug