content/media/webspeech/recognition/SpeechRecognition.h
@@ -170,7 +170,6 @@ private:
     STATE_WAITING_FOR_SPEECH,
     STATE_RECOGNIZING,
     STATE_WAITING_FOR_RESULT,
-    STATE_ABORTING,
     STATE_COUNT
   };
 
@@ -260,6 +259,7 @@ private:
   uint32_t mBufferedSamples;
 
   nsCOMPtr<nsITimer> mSpeechDetectionTimer;
+  bool mAborted;
 
   void ProcessTestEventRequest(nsISupports* aSubject, const nsAString& aEventName);
 
